Try to fix layout problems

--- a/css/style.css
+++ b/css/style.css
@@ -28,11 +28,6 @@ h1, h2, h3, h4, h5, h6 {
     border-bottom: none;
 }
 
-.header {
-    padding: 20px 0px 0;
-    padding-top: 20px;
-}
-
 .header p {
     text-align: justify;
 }
